test: Fix timeout during test